# sphere_uniform_geocoding

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/top/plusalpha/sphere_uniform_geocoding_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: sphere_uniform_geocoding.podspec
lib/: sphere_uniform_geocoding.dart  sphere_uniform_geocoding_bindings_generated.dart
linux/: CMakeLists.txt
macos/: sphere_uniform_geocoding.podspec
macos/Classes/: sphere_uniform_geocoding.c
src/: CMakeLists.txt  main.c  sphere_uniform_geocoding.c  sphere_uniform_geocoding.h
windows/: CMakeLists.txt
